--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <nav class="container">
         <!--Кнопка-->
         <div class="button button_fact">
-          <h3 class="button_fact">Цікавий факт</h3>
+          <h3 class="button_fact">Цiкавий факт</h3>
         </div>
         <!--Кнопка-->
         <div class="button button_word">
