--- a/skin.html
+++ b/skin.html
@@ -7,6 +7,6 @@
     <title>Skins</title>
   </head>
   <body>
-    <img src="Lemonnik.png" />
+    <img src="LemonGamer6484.png" />
   </body>
 </html>
